Add FileDatabase